# cmp

./: .gitignore  CMakeLists.txt  README.org
cmake/: FindChipmunk.cmake
src/: game.c  game.h  grb.c  grb.h  main.c  main.h  sdl_setup.c  sdl_setup.h  window-details.h
